test/valid/56307_countdownFunction/countdownFunction.agu
-- Author: 56307, Denis Ungureanu
let countdown (n) : Int -> Unit =
  while n > 0 do (
    print(n) ;
    set n = n - 1
  )

let main(_) : Unit -> Unit = countdown(5)