test/invalid-syntax/56307_extraClosingParenthesis/extraClosingParenthesis.agu
-- Author: 56307, Denis Ungureanu, Syntax Test 2
let extraParen (x) : Int -> Int = (x + 1))